OPen api controller to brand
