# src/main/java/com/standard/controller/BrandController.java
@@ -6,54 +6,51 @@ import lombok.AllArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
 
-@RestController
 @AllArgsConstructor
-@RequestMapping(BrandController.BASE_URL)
-public class BrandController {
-
-    public static final String BASE_URL = "/private/api/v1/brand";
+@RestController("${openapi.openApi.base-path:/v1}")
+public class BrandController implements BrandControllerApi {
 
     private final BrandService brandService;
 
-    @GetMapping({""})
+    @Override
     @PreAuthorize("hasRole('ROLE_ADMIN') or hasAuthority('BRAND_SEARCH')")
-    public ResponseEntity<List<Brand>> findAll() {return new ResponseEntity<>(brandService.findAll(), HttpStatus.OK);}
+    public ResponseEntity<List<Brand>> findAll()
+    {
+        return new ResponseEntity<>(brandService.findAll(), HttpStatus.OK);
+    }
 
-    @GetMapping({"/{id}"})
+    @Override
     @PreAuthorize("hasRole('ROLE_ADMIN') or hasAuthority('BRAND_SEARCH')")
     public ResponseEntity<Brand> findById(@PathVariable Long id) {
         return new ResponseEntity<>(brandService.findById(id), HttpStatus.OK);
     }
 
+    @Override
     @PostMapping
     @PreAuthorize("hasRole('ROLE_ADMIN') or hasAuthority('BRAND_ADD')")
-    public ResponseEntity<Brand> save(@RequestBody Brand obj) {
+    public ResponseEntity<Brand> save(@RequestBody Brand obj)
+    {
         return new ResponseEntity<>(brandService.create(obj), HttpStatus.CREATED);
     }
 
-    @DeleteMapping({"/{id}"})
-    @ResponseStatus(HttpStatus.NO_CONTENT)
+    @Override
     @PreAuthorize("hasRole('ROLE_ADMIN') or hasAuthority('BRAND_DELETE')")
-    public void delete(@PathVariable Long id) {
+    public ResponseEntity<Void> delete(@PathVariable Long id) {
         brandService.delete(id);
+        return new ResponseEntity<>(HttpStatus.OK);
     }
 
-    @PutMapping({"/{id}"})
+    @Override
     @PreAuthorize("hasRole('ROLE_ADMIN') or hasAuthority('BRAND_UPDATE')")
-    public ResponseEntity<Brand> update(@PathVariable Long id, @RequestBody Brand obj) {
-        return new ResponseEntity<>(brandService.update(id, obj), HttpStatus.OK);
+    public ResponseEntity<Brand> update(@PathVariable Long id, @RequestBody Brand brand) {
+        return new ResponseEntity<>(brandService.update(id, brand), HttpStatus.OK);
     }
 
 }
